# odostavka.online

./: .cursorrules.md  .gitignore  ADMIN-UPDATE-INSTRUCTIONS.md  GITHUB-SECRETS.md  README-DEPLOYMENT.md  README.md  SERVER-SETUP-GUIDE.md  SERVER-SETUP-MANUAL.md  VERCEL-DEPLOYMENT.md  check-env.sh  deploy-database.sh  deploy-main.sh  deploy-now.sh  deploy.sh  docker-compose-all.yml  docker-compose-database.yml  docker-compose-db-api.yml  docker-compose-full.yml  docker-compose.yml  env.database  env.database.production  env.example  env.local  env.main.production  fix-database.sh  install-docker.sh  manual-deploy.sh  quick-check.sh  setup-docker.sh  setup-server.sh  start-all.sh  start-db-api.sh  start-full-stack.sh  test-db-connection.sh  update-admin.sh  update-certificates.sh
food-delivery-api/: Dockerfile  env.example  main.py  pyproject.toml
food-delivery-api/alembic/: env.py
food-delivery-api/alembic/versions/: 27ec703a04b5_add_super_admin_role.py  4eb02b2da039_create_all_tables.py
food-delivery-api/app/api/: admin.py  auth.py  delivery.py  favorites.py  orders.py  payments.py  products.py  restaurants.py  support.py  users.py
food-delivery-api/app/core/: config.py
food-delivery-api/app/db/: database.py  init_db.py  seed_data.py
food-delivery-api/app/models/: __init__.py  delivery_settings.py  favorite.py  order.py  payment.py  product.py  refresh_token.py  restaurant.py  support_settings.py  user.py
food-delivery-api/app/schemas/: __init__.py  delivery_settings.py  favorite.py  order.py  payment.py  product.py  restaurant.py  support_settings.py  (+1 more)
(+139 files in other folders)
